# galaxy

analysis/: CMakeLists.txt  main.cpp
cartwheel/: CMakeLists.txt  main.cpp
data/: .gitignore  hoge.init
generate/: CMakeLists.txt  main.cpp
gnuplot/: ene.gnuplot  mass.gnuplot
nbody/: CMakeLists.txt  main.cpp
